include new transfer flags
